@@ -54,6 +54,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       purged. Useful for freeing nodes from a job when one node goes down
       midjob.
   b - fixed gcc warnings reported by Skip Montanaro
+  e - added RPT_BAVAIL define that allows pbs_mom to report f_bavail instead of
+      f_bfree on Linux systems
 
 2.4.8
   e - Bugzilla bug 22. HIGH_PRECISION_FAIRSHARE for fifo scheduling.
